k8s/expense-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-mongo
  namespace: expense-dashboard
  labels:
    app: expense-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-mongo
  template:
    metadata:
      labels:
        app: expense-mongo
    spec:
      containers:
        - name: expense-mongo
          image: mongo:7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 20
            periodSeconds: 20
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: expense-mongo-data
---
apiVersion: v1
kind: Service
metadata:
  name: expense-mongo
  namespace: expense-dashboard
  labels:
    app: expense-mongo
spec:
  type: ClusterIP
  selector:
    app: expense-mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
