k8s/expense-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-dashboard
  namespace: expense-dashboard
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: expense-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expense-frontend
                port:
                  number: 80
